# MailingManager

./: README.md  env.example  pyproject.toml
config/: settings.py  urls.py
fixtures/: mailing_manager.json  users.json
mailing_manager/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing_manager/management/commands/: add_test_data.py  clear_db.py  create_db.py  start_mailing.py  start_test_db.py
mailing_manager/migrations/: 0001_initial.py  0002_alter_client_options_alter_mailing_options_and_more.py  0003_alter_client_options_alter_mailing_options_and_more.py
mailing_manager/templates/mailing_manager/: base.html  client_detail.html  client_form.html  client_list.html  delete_confirm_form.html  home.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailingattempt_list.html  message_detail.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: add_test_users.py  create_managers_group.py  createadmin.py  createmanager.py  createuser.py
users/migrations/: 0001_initial.py  0002_customuser_token_alter_customuser_groups_and_more.py  0003_alter_customuser_groups_alter_customuser_is_active.py  0004_alter_customuser_options_alter_customuser_groups_and_more.py  0005_alter_customuser_groups_alter_customuser_is_active.py  0006_alter_customuser_groups_alter_customuser_is_active.py
users/templates/users/: delete_confirm_form.html  login.html  profile.html  psw_reset_complete.html  psw_reset_confirm.html  (+6 more)
users/templatetags/: my_tag.py
(+2 files in other folders)
