[tool.poetry]
name = "mailingmanager"
version = "0.1.0"
description = ""
authors = ["Ramazan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
python-dotenv = "^1.0.1"
ipython = "^8.29.0"
pillow = "^11.0.0"
redis = "^5.2.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
types-psycopg2 = "^2.9.21.20241019"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs      # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | incutils
  )/
)
'''
